--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.5",
     "@types/pg": "^7.14.5",
     "nodemon": "^2.0.6"
