--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "pg": "^8.4.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.5",
