--- a/server/package.json
+++ b/server/package.json
@@ -12,18 +12,26 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.4.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.5",
+    "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.14.5",
     "nodemon": "^2.0.6",
     "prettier": "2.1.2"
