--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.21.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.11"
+    "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.6"
   }
 }
