--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "antd": "^4.8.2",
     "axios": "^0.21.0",
     "immutable": "^4.0.0-rc.12",
     "react": "^17.0.1",
