--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.8.2",
     "axios": "^0.21.0",
     "immutable": "^4.0.0-rc.12",
+    "moment-duration-format": "^2.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/moment-duration-format": "^2.2.2",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6"
   }
