--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/moment-duration-format": "^2.2.2",
     "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-router-dom": "^5.1.6",
+    "react-snap": "^1.23.0"
   }
 }
