Add puppeteer args for vercel build compatibility

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,12 @@
     "eject": "react-scripts eject",
     "postbuild": "react-snap"
   },
+  "reactSnap": {
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
+    ]
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
