--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "watch": "tsc -w",
     "start": "node dist/index.js",
     "start:dev": "nodemon dist/index.js",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "build": "tsc --build"
   },
   "keywords": [],
   "author": "",
